[package]
name = "bitcoind"
version = "0.28.1"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a regtest bitcoind process, useful in integration testing environment"
license = "MIT"
repository = "https://github.com/RCasatta/bitcoind"
documentation = "https://docs.rs/bitcoind/"
rust-version = "1.57"
edition = "2018"

[dependencies]
bitcoincore-rpc = "0.16.0"
tempfile = "3.1"
log = "0.4"
which = "4.2.5"

[dev-dependencies]
env_logger = "0.9"

[build-dependencies]
bitcoin_hashes = "0.11"
filetime = "0.2"
flate2 = "1.0"
tar = "0.4"
minreq = { version="2.6.0", features = ["https"] }
zip = "0.6"
time = "=0.3.10"  # otherwise rust 1.57 fails to select time "^0.3.7"

[features]
"23_0" = []
"22_0" = []
"0_21_1" = []
"0_21_0" = []
"0_20_1" = []
"0_20_0" = []
"0_19_1" = []
"0_19_0_1" = []
"0_18_1" = []
"0_18_0" = []
"0_17_1" = []
