[package]
name = "bitcoind"
version = "0.29.1"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a regtest bitcoind process, useful in integration testing environment"
license = "MIT"
repository = "https://github.com/RCasatta/bitcoind"
documentation = "https://docs.rs/bitcoind/"
rust-version = "1.41.1"  # without features, with any feature is 1.57
edition = "2018"

[dependencies]
bitcoincore-rpc = "0.16.0"
tempfile = "3.1"
log = "0.4"
which = "4.2.5"
anyhow = "1.0.66"

[dev-dependencies]
env_logger = "0.9.0"

[build-dependencies]
bitcoin_hashes = { version = "0.11", optional = true }
flate2 = { version = "1.0", optional = true } 
tar = { version = "0.4", optional = true } 
ureq = { version = "2.5.0", optional = true }
zip = { version = "0.6", optional = true }

[features]
"download" = [ "bitcoin_hashes", "flate2", "tar", "ureq", "zip"]
"23_0" = ["download"]
"22_0" = ["download"]
"0_21_1" = ["download"]
"0_21_0" = ["download"]
"0_20_1" = ["download"]
"0_20_0" = ["download"]
"0_19_1" = ["download"]
"0_19_0_1" = ["download"]
"0_18_1" = ["download"]
"0_18_0" = ["download"]
"0_17_1" = ["download"]
