[package]
name = "bitcoind"
version = "0.35.1"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a regtest bitcoind process, useful in integration testing environment"
license = "MIT"
repository = "https://github.com/RCasatta/bitcoind"
documentation = "https://docs.rs/bitcoind/"
rust-version = "1.56.1"
edition = "2018"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]

[dependencies]
bitcoincore-rpc = { version = "0.18.0" }
log = "0.4"
which = "4.2.5"
anyhow = "1.0.66"
tempfile = "3"

[dev-dependencies]
env_logger = "0.9.0"

[build-dependencies]
bitcoin_hashes = { version = "0.13", optional = true }
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
minreq = { version = "2.9.1", default-features = false, features = [
    "https",
], optional = true }
zip = { version = "0.6", optional = true }
anyhow = "1.0.66"

[features]

# download is not supposed to be used directly only through selecting one of the version feature
"download" = ["bitcoin_hashes", "flate2", "tar", "minreq", "zip"]

"26_0" = ["download", "25_1"]
"25_1" = ["download", "25_0"]
"25_0" = ["download", "24_0_1"]
"24_0_1" = ["download", "23_1"]
"23_1" = ["download", "22_1"]
"22_1" = ["download", "0_21_2"]
"0_21_2" = ["download", "0_20_2"]
"0_20_2" = ["download", "0_19_1"]
"0_19_1" = ["download", "0_18_1"]
"0_18_1" = ["download", "0_17_1"]
"0_17_1" = ["download"]

"doc" = [] # used only for documentation building


[package.metadata.docs.rs]
features = ["download", "doc"]
rustdoc-args = ["--cfg", "docsrs"]
